welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true
           ^max1020:6: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^max1020:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
  } else return false
                ^