welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  var A=Math.max(a,b);
  if (A>=10 && A<=20) {
    return true
  } else if (a<10 && a>20 && b<10 && b>20) {
    return false
  } else return false
}